# catch_them_all_turtlesim

./: README.md
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/cpp_pkg/lib/cpp_pkg/: spawner
install/cpp_pkg/share/cpp_pkg/: package.sh  package.xml
install/launch/share/ament_index/resource_index/parent_prefix_path/: launch
install/launch/share/launch/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/launch/share/launch/cmake/: launchConfig.cmake
install/launch/share/launch/launch/: catch_them_all.launch.py  catch_them_all_cpp.launch.py
install/py_pkg/lib/py_pkg/: controller  spawner
install/py_pkg/share/py_pkg/: package.sh  package.xml
install/turtle_interfaces/include/turtle_interfaces/turtle_interfaces/msg/: turtle.h  turtle.hpp
install/turtle_interfaces/include/turtle_interfaces/turtle_interfaces/msg/detail/: turtle__builder.hpp  turtle__functions.c  turtle__rosidl_typesupport_introspection_c.h  (+12 more)
install/turtle_interfaces/share/turtle_interfaces/: package.sh
install/turtle_interfaces/share/turtle_interfaces/msg/: Turtle.idl  TurtleArray.idl
install/turtle_interfaces/share/turtle_interfaces/srv/: CatchTurtle.idl
log/: latest_build  latest_list
src/cpp_pkg/: CMakeLists.txt
src/cpp_pkg/src/: controller_node.cpp  spawner_node.cpp
src/launch/: CMakeLists.txt
src/launch/launch/: catch_them_all.launch.py
src/py_pkg/: setup.py
src/py_pkg/py_pkg/: spawner_node.py
src/turtle_interfaces/: CMakeLists.txt  package.xml
src/turtle_interfaces/msg/: Turtle.msg
(+14 files in other folders)
